# TCP-Project-C-

./: README.md
client/: package-lock.json  package.json
client/src/: client.ts  crypto_utils.ts  four_squares.ts  protocol.d.ts  protocol.js
proto/: protocol.options  protocol.proto
server/: CMakeLists.txt
server/include/: CryptoHandler.hpp  Server.hpp  protocol.pb.c  protocol.pb.h
server/src/: CryptoHandler.cpp  Server.cpp  main.cpp  protocol.pb.c
simple_assignment/: build.sh  client.ts  package.json  protocol.options  protocol.proto  server.cpp
